--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" href="calculator.css">
-  <link rel="text/javascript" href="calculator.js">
+  <script type="text/javascript" src="calculator.js" async></script>
 </head>
 
 <div class="container">
